Add missing files

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,14 @@ rvm:
   - 2.5.9
   - 2.6.7
   - 2.7.3
+  - 3.0.4
 gemfile:
   - gemfiles/sidekiq_4_0.gemfile
   - gemfiles/sidekiq_4_1.gemfile
   - gemfiles/sidekiq_4_2.gemfile
   - gemfiles/sidekiq_5_0.gemfile
   - gemfiles/sidekiq_5_1.gemfile
+  - gemfiles/sidekiq_6_4.gemfile
 services:
   - redis-server
 cache: bundler
